# ipicmini

./: .gitignore  CMakeLists.txt  GEM.inp  iPICmini.cpp  launch-runs.sh  makefile
include/: Collective.h  ParallelIO.h  TimeTasks.h  iPic3D.h
inputfiles/: GEM.inp  GEM3D.inp  TaylorGreen.inp  clusterDiags.py  hello.py  ipicmini.inp  storePersistenceDiagram.py  test.py
inputoutput/: ParallelIO.cpp  ParallelIO.cpp.orig
main/: iPIC3Dlib.cpp
src/: CMakeLists.txt  iPICmini.cpp
src/catalyst/: Adaptor.cxx  Adaptor.h
src/catalyst/scripts/: image.py  test.py
src/fields/: EMfields3D.cpp
src/include/: Collective.h
src/main/: Collective.cpp  iPIC3Dlib.cpp
